Update CMakeLists.txt for better project structure
Refactor CMakeLists.txt to organize sources, headers, and UI files.

--- a/project4_v2/CMakeLists.txt
+++ b/project4_v2/CMakeLists.txt
@@ -3,16 +3,32 @@ cmake_minimum_required(VERSION 3.16)
 project(Project4_v2 VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find and include the Qt6 package
+# Qt6
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 
-# Set the executable
-add_executable(Project4_v2 main.cpp haffumantree.cpp)
+set(SOURCES
+    main.cpp
+    mainwindow.cpp
+    haffumantree.cpp
+)
 
-# Link against the Qt6 libraries
-target_link_libraries(Project4_v2 Qt6::Widgets)
+set(HEADERS
+    mainwindow.h
+    haffumantree.h
+)
 
-# Ensure the headers are accessible
-include_directories(${CMAKE_SOURCE_DIR})
+set(UI
+    mainwindow.ui
+)
+
+qt_wrap_ui(UI_HEADERS ${UI})
+
+add_executable(Project4_v2
+    ${SOURCES}
+    ${HEADERS}
+    ${UI}
+)
+
+target_link_libraries(Project4_v2 PRIVATE Qt6::Widgets)
